# bav-haltestellen

./: .gitignore  README.md  generate.py  pyproject.toml
src/: SOURCE.md  bav_list_future_timetable.csv  bav_list_future_timetable.ods
static/: bav_list.csv  bav_list.geojson  bav_list.json
