[tool.poetry]
name = "bav-haltestellen"
version = "0.1.0"
description = "Public transport stops in switzerland based on https://opentransportdata.swiss/de/dataset/didok"
authors = ["TB <tb@wodore.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pydantic = "^1.10.7"
rich = "^13.3.4"
geojson-pydantic = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
